samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Tenant__c/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <label>Emergency Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>