samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Tenant__c/fields/Lease_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_End_Date__c</fullName>
    <label>Lease End Date</label>
    <type>Date</type>
</CustomField>