samples/webapp-template-app-react-sample-b2x-experimental/force-app/main/default/objects/Tenant__c/fields/Lease_Property__c.field-meta.xml
<CustomField>
    <fullName>Lease_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipName>Tenants</relationshipName>
    <type>Lookup</type>
</CustomField>